# extension-manifest-converter

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg  test.py
.github/workflows/: test.yml
emc/: __init__.py  emc.py
emc/lib/: __init__.py  convert.py  frontend.py  logger.py  type.py  worker.py  wrapper.py
emc/lib/modifiers/: ContentSecurityPolicyModifier.py  ExecuteScriptModifier.py  HostPermissionsModifier.py  InsertCssModifier.py  JSActionModifier.py  ManifestActionModifier.py  ManifestVersionModifier.py  Modifier.py  ServiceWorkerModifier.py  WebAccessibleResourcesModifier.py  __init__.py
emc/utils/: arguments.py  unzip.py  zip.py
tests/: test_convert.py  test_type.py
