[metadata]
name = extension_manifest_converter
version = attr: emc.__version__
description = Convert existing Chrome extensions to Manifest V3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/extension-manifest-converter
author = Solomon Kinard
author_email = solomonkinard@google.com
maintainer = eggplants
maintainer_email = w10776e8w@yahoo.co.jp
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    emc = emc.emc:main

[options.extras_require]
dev =
    pre-commit
    pytest
    setuptools>=46.4.0
    types-setuptools

[options.package_data]
emc = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.10
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
